--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mercedlogger": "^1.0.1",
     "mongodb": "^4.1.4",
     "mongoose": "^7.3.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.2"
   }
 }
